<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory 
	    android:title="@string/str_first_category_title"
	    >
	    
	    <!--CheckBoxPreference
	        android:key="cbp_checkbox_preference1"
	        android:title="@string/str_cbp_checkbox_preference1_title"
	    /-->
	    
	    <!--CheckBoxPreference
	        android:key="cbp_checkbox_preference2"
	        android:title="@string/str_cbp_checkbox_preference2_title"
	    /-->

	    <EditTextPreference
	        android:key="etp_edittext_preference1"
	        android:title="@string/str_etp_edittext_preference1_title"
			android:summary="Set Your Password"
	    />
	</PreferenceCategory>
	
	<PreferenceCategory
	    android:title="@string/str_second_category_title"	        
	    >

		<CheckBoxPreference
	        android:key="cbp_checkbox_preference1"
	        android:title="@string/str_cbp_checkbox_preference1_title"
			android:summary="Lock The Screen With Password"
	    />
	    
	    <ListPreference 
	        android:key="lp_list_preference"
	        android:title="@string/lp_list_preference_title"
			android:summary="Set Update Reminder Frequency"
	        android:entries="@array/array_list_preference_entries"
	        android:entryValues="@array/array_list_preference_entry_values"	        
	        />
	    
	    <!--RingtonePreference
	        android:key="rtp_ringtone_preference"
	        android:title="@string/rtp_ringtone_preference_title"	        	        
	        /-->
	        
	</PreferenceCategory>
	
	<!--PreferenceScreen
	    android:title="@string/more"
	    >
	    <PreferenceCategory 
	        android:title="@string/str_third_category_title"
	        >
		    <EditTextPreference 
		        android:key="etp_edittext_preference2"
		        android:title="@string/str_etp_edittext_preference2_title"	        
		    />
	    </PreferenceCategory>
	</PreferenceScreen-->
    
    
    
</PreferenceScreen>
